# auto-econ-agent

./: README.md  pyproject.toml
auto_econ_agent/: __init__.py  custom_zero_shot_agent.py  ens_tool.py  open_rpc_toolkit.py  sign.py  wallet.py
auto_econ_agent/constants/: ethereum_rpc.json
